objects/User.object
<CustomObject>
    <fields>
        <fullName>CMSCounselorID__c</fullName>
        <description>Represents the unique identifier or code assigned to the counselor</description>
        <inlineHelpText>If this field is blank the user will not be reported to HUD as a counselor.</inlineHelpText>
        <label>CMS Counselor ID</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CounselorBillingMethod__c</fullName>
        <description>Indicates the method used for billing clients by the counselor.</description>
        <inlineHelpText>Billing method for HUD housing counseling.</inlineHelpText>
        <label>Counselor Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CounselorBillingRate__c</fullName>
        <description>Specifies the rate at which the counselor bills clients for their services.</description>
        <inlineHelpText>Billing rate for HUD housing counseling.</inlineHelpText>
        <label>Counselor Billing Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CounselorHUDID__c</fullName>
        <description>The unique identifier or code assigned to the counselor by HUD</description>
        <inlineHelpText>The 6-digit number found on the counselor&apos;s HUD certificate. If the counselor works for agency but does not conduct one-on-one counseling sessions, they may not have a HUD Counselor ID. Enter NA</inlineHelpText>
        <label>Counselor HUD ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CounselorServiceTypes__c</fullName>
        <description>Indicates the types of counseling services provided by the counselor.</description>
        <inlineHelpText>Select one or more options from the picklist to specify the types of counseling services offered by the counselor.</inlineHelpText>
        <label>Counselor Service Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mortgage Delinquency and Default Resolution Counseling</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage Counseling</fullName>
                </value>
                <value>
                    <fullName>Home Improvement and Rehabilitation Counseling</fullName>
                </value>
                <value>
                    <fullName>Services for Homeless Counseling</fullName>
                </value>
                <value>
                    <fullName>Financial Management/Budget Counseling</fullName>
                </value>
                <value>
                    <fullName>Pre-purchase Counseling</fullName>
                </value>
                <value>
                    <fullName>Rental Housing Counseling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmploymentEndDate__c</fullName>
        <description>The date on which the counselor&apos;s employment with the organization ends.</description>
        <inlineHelpText>Enter the date on which the counselor&apos;s employment with the organization ends</inlineHelpText>
        <label>Employment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmploymentStartDate__c</fullName>
        <description>The date on which the counselor&apos;s employment with the organization began.</description>
        <inlineHelpText>Enter the date on which the counselor&apos;s employment with the organization began</inlineHelpText>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCounselor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Counselor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>ASL</fullName>
                </value>
                <value>
                    <fullName>Cambodian</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>Chinese Mandarin</fullName>
                </value>
                <value>
                    <fullName>Creole</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Farsi</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Hmong</fullName>
                </value>
                <value>
                    <fullName>Indonesian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swahili</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Ukrainian</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValidationCombined__c</fullName>
        <formula>IF(ISBLANK(CMSCounselorID__c) || ISNULL(EmploymentStartDate__c) || ISNULL(Languages__c) ||
ISNULL(CounselorServiceTypes__c) || ISBLANK(CounselorHUDID__c) || ISPICKVAL(CounselorBillingMethod__c,&apos;&apos; ) ||
ISBLANK(CounselorBillingRate__c),
&apos;Required field(s) missing: &apos; &amp;
IF(ISBLANK(CMSCounselorID__c), &apos;CMS Counselor ID, &apos;, &apos;&apos;) &amp;
IF(ISNULL(EmploymentStartDate__c), &apos;Employment Start Date, &apos;, &apos;&apos;) &amp;
IF(ISNULL(Languages__c), &apos;Languages, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(CounselorHUDID__c), &apos;Counselor HUD ID, &apos;, &apos;&apos;) &amp;
IF(ISNULL(CounselorServiceTypes__c), &apos;Counselor Service Type, &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(CounselorBillingMethod__c, &apos;&apos;), &apos;Counselor Billing Method, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(CounselorBillingRate__c), &apos;Counselor Billing Rate, &apos;, &apos;&apos;),
&apos;NO ERROR&apos;
)</formula>
        <label>Validation Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AlternateHostName__c</fullName>
        <inlineHelpText>This is a SUMO Scheduler field used to anonymize users</inlineHelpText>
        <label>Alternate Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MALE</fullName>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>FEMALE</fullName>
                    <label>Female</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__InviteTemplate__c</fullName>
        <label>Invite Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__IsInvitedToUseSumo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Invited to use Sumo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__OnlineSchedulerPhoneDetails__c</fullName>
        <label>Online Scheduler Phone Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WebConferenceDetails__c</fullName>
        <label>Video Conference Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__WebConferenceType__c</fullName>
        <defaultValue>&quot;USERS_LINK&quot;</defaultValue>
        <label>Web Conference Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__WebConferenceTypes</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveInternalUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Internal Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>NWCompass Portal</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers2</fullName>
        <columns>FULL_NAME</columns>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>NWCompass Portal</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>pcn</value>
        </filters>
        <label>Users PCN</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_System_Admins</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active System Admins</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>Agency_Users</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>equals</operation>
            <value>The Housing Partnership of NJ</value>
        </filters>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>equals</operation>
            <value>NHS of Baltimore</value>
        </filters>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>equals</operation>
            <value>Houston Area Urban League</value>
        </filters>
        <label>Agency Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Custom_Filter</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>SALES.CONTACT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Vishal</value>
        </filters>
        <label>Custom Filter</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NW_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>contains</operation>
            <value>NW,Compass</value>
        </filters>
        <label>NW Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PCN_Test_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>PCN</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>PCN Test Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QA_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>King</value>
        </filters>
        <label>QA View</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMS_Counselor_ID</fullName>
        <active>false</active>
        <description>If Is Counselor checkbox is True, the field must be 5 digits.</description>
        <errorConditionFormula>AND(IsCounselor__c,TRUE,
OR(
LEN(CMSCounselorID__c) &lt;&gt; 5,
NOT(ISNUMBER(CMSCounselorID__c)),
ISBLANK(CMSCounselorID__c)
))</errorConditionFormula>
        <errorDisplayField>CMSCounselorID__c</errorDisplayField>
        <errorMessage>CMS Counselor ID is required and unique within the agency to link counselors.</errorMessage>
    </validationRules>
</CustomObject>